added margin to legend

--- a/blackcodemaker.github.io-search-api/index.css
+++ b/blackcodemaker.github.io-search-api/index.css
@@ -220,6 +220,7 @@ legend {
     font-family: 'Lato', sans-serif;
     font-weight: 700;
     font-size: small;
+    margin: 0 auto;
 }
 
 .search {
