--- a/index.css
+++ b/index.css
@@ -195,16 +195,19 @@ p {
 
 #testFooter {
   font-family: Arial, Helvetica, sans-serif;
-  width: 981px;
-  margin: 0 auto 8px;
-  text-shadow: 0 1px 0px #fff;
-  position: absolute;
+  margin: 0 auto;
+  color: white;
+  position: fixed;
   right: 0;
   bottom: 0;
   left: 0;
   padding: 1rem;
-  /*background-color: #FECE06;*/
   text-align: center;
+}
+
+p.contact {
+  color: white;
+  line-height: 0.75rem;
 }
 
 /* general form styles */
