--- a/index.css
+++ b/index.css
@@ -197,7 +197,7 @@ p {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0 auto;
   color: white;
-  position: fixed;
+  position: relative;
   right: 0;
   bottom: 0;
   left: 0;
